# your-ai-obsfucation-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.html  PRD.md  README.md  SPRINT.html  demo.py  docker-compose.yml  fly.toml  pyproject.toml  vercel.json
api/: config.py  main.py  schemas.py  state.py
api/routes/: audit.py  pipeline.py  sessions.py
audit/: __init__.py  event.py  log.py
deobfuscation/: __init__.py  restorer.py
detection/: __init__.py  detector.py  entity.py  types.py
detection/recognizers/: __init__.py  address.py  diagnosis.py  financial.py  healthcare_ids.py  legal.py  medication.py
evals/: run_langsmith.py
llm_client/: __init__.py  anthropic_client.py  base.py  mock.py  tracing.py
obfuscation/: __init__.py
obfuscation/engine/: __init__.py  engine.py
obfuscation/strategies/: __init__.py  base.py  pseudonymization.py  tokenization.py
pipeline/: __init__.py  manager.py  orchestrator.py  result.py
store/: __init__.py  document.py  extractors.py  keys.py
synthetic_data/: README.md  manifest.json
synthetic_data/financial/: tax_and_wire_packet.txt  tax_intake_table.txt
synthetic_data/healthcare/: noisy_ocr_intake.txt  provider_email_thread.txt  referral_packet.txt
synthetic_data/identity/: adversarial_identifier_packet.txt  customer_support_incident.txt
synthetic_data/legal/: long_privileged_brief_excerpt.txt  privileged_strategy_memo.txt
synthetic_data/mixed/: hr_accommodation_claim.txt
tests/: conftest.py
tests/fixtures/: __init__.py  build.py
tests/fixtures/rendered/: financial_statement.docx  financial_statement.txt  legal_memo.docx  legal_memo.txt  medical_intake.docx  medical_intake.txt
tests/fixtures/sources/: __init__.py  financial_statement.py  legal_memo.py  medical_intake.py
tests/integration/: test_api.py  test_perf.py  test_pipeline_e2e.py  test_synthetic_manifest.py  test_zero_leakage_100.py
tests/unit/: test_audit.py  test_config.py  test_deobfuscation.py  test_detection.py  test_engine.py  test_llm_client.py  test_pipeline.py  test_store.py  test_strategies.py  test_vault.py
ui/: package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  XrayWorkbench.tsx  api.ts  components.tsx  highlight.tsx  index.css  xrayPalette.ts
vault/: __init__.py  keys.py  session.py  storage.py  tokens.py
